syntax = "proto3";

option go_package = "./pb";

package pb;

message GetDeploymentRequest {
    string namespace = 1;
    string user_id = 2;
}

message GetDeploymentsResponse {
    repeated Deployment deployments = 1;
}

message Deployment {
    string namespace = 2;
    string name = 3;
    string docker_image = 4;
    string cpu = 5;
    string memory = 6;
    int32 replicas = 7;
    int32 port = 8;
    map<string, string> environments = 9;
    string created_at = 10;
}

message PostDeploymentRequest {
    string user_id = 1;
    Deployment deployment = 2;
}

message PostDeploymentResponse {
    string id = 1;
    Deployment deployment = 2;
}

message DeleteDeploymentRequest {
    string user_id = 1;
    string name = 2;
}

message DeleteDeploymentResponse {
    string message = 1;
}

service ContainerService {
    rpc GetDeployments(GetDeploymentRequest) returns (GetDeploymentsResponse);
    rpc CreateDeployment(PostDeploymentRequest) returns (PostDeploymentResponse);
    rpc DeleteDeployment(DeleteDeploymentRequest) returns (DeleteDeploymentResponse);
}